[project]
name = "bark-tts-server"
version = "1.0.0"
description = "Bark TTS Server - Expressive multi-language speech synthesis"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "transformers>=4.35.0",
    "accelerate>=0.24.0",
    "scipy>=1.11.0",
    "numpy>=1.24.0",
    "soundfile>=0.12.0",
    "python-multipart>=0.0.6",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "ipykernel>=6.25.0",
    "matplotlib>=3.7.0",
]